# cse169_starter_windows

./: CMakeLists.txt  README.md  main.cpp  main_orig.cpp
include/: AnimationClip.h  Channel.h  Cloth.h  DOF.h  Fluid.h  Joint.h  Keyframe.h  Particle.h  Skeleton.h  Skin.h  SpringDamper.h  Triangle.h  Window.h
src/: AnimationClip.cpp  Channel.cpp  Cloth.cpp  DOF.cpp  Fluid.cpp  Joint.cpp  Shader.cpp  Skeleton.cpp  Skin.cpp  SpringDamper.cpp  Triangle.cpp  Window.cpp
